# issue-to-patch

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: usage.md
src/issue_agent/: __init__.py  bench.py  cli.py  config.py  diagnostics.py  errors.py  executor.py  gitops.py  issue.py  metrics.py  models.py  patches.py  router.py  solver.py
tests/: test_config.py  test_diagnostics.py  test_gitops_executor.py  test_issue.py  test_metrics_bench_cli.py  test_models_router.py  test_patches.py  test_solver.py
